# oxytec_evaluator

./: .gitignore  BACKEND_RUNNING.md  CLAUDE.md  FRONTEND_SETUP.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  docker-compose.yml  oxytec-platform-architecture.md
backend/: .env.example  =8.2.0  Dockerfile  datenblatt_extraction_v2.json  pyproject.toml  test_consolidated_findings.py  test_flowise_structure.py  test_json_parsing.py  test_no_markdown_headers.py  test_phase3_subagent_prompting.py  test_phase4_risk_assessment.py  test_phase5_planner_examples.py
backend/app/: config.py  main.py
backend/app/agents/: graph.py  prompts.py  state.py  timing.py  tools.py  validation.py
backend/app/api/: dependencies.py
backend/app/db/: session.py
backend/app/models/: database.py  schemas.py
backend/app/services/: document_service.py  embedding_service.py  llm_service.py  pdf_service.py  rag_service.py  technology_rag_service.py
backend/app/utils/: cas_validator.py  error_handler.py  extraction_quality_validator.py  helpers.py  logger.py  substance_corrections.py
backend/db/: init.sql
backend/docs/: LANGSMITH_SETUP.md  RAG_VERIFICATION_GUIDE.md  README.md  SUPABASE_VECTORSTORE_SETUP.md
backend/docs/development/: PROMPT_CHANGELOG.md
backend/migrations/: 001_add_vector_indexes.sql
backend/scripts/: analyze_timing.py  diagnose_ingestion.py  example_products.json  extract_prompts.py  ingest_products.py  ingest_technology_knowledge.py  migrate_add_technology_tables.py  test_technology_rag.py  validate_phase3.py  verify_subagent_fix.py
backend/tests/: README.md
(+146 files in other folders)
